--- a/src/assets/css/components/header.css
+++ b/src/assets/css/components/header.css
@@ -14,14 +14,14 @@
 
 .context h1{
     text-align: center;
-    color: #fff;
+    color: #3f51b6;
     font-size: 70px;
     font-family: 'Exo', sans-serif;
 }
 
 .context h2{
     text-align: center;
-    color: #fff;
+    color: #3f51b6;
     font-size: 40px;
     font-family: 'Exo', sans-serif;
 }
